# voiceai

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security_best_practices_report.md  soc2.md  soc2findings.md
agent/: .gitignore  Dockerfile  pyproject.toml
agent/src/agent/: __init__.py  audit_log.py  config.py  local_interview.py  rubric_loader.py
agent/src/agent/controller/: __init__.py  decision.py  emit.py  event_log.py  interview.py  machine.py  states.py  timing.py  turn_metrics.py
agent/src/agent/domain/: __init__.py  types.py
agent/src/agent/eval/: __init__.py  calibrate.py  corpus.py  metrics.py  replay.py
agent/src/agent/scoring/: __init__.py  io_types.py  (+4 more)
agent/tests/: test_audit_log.py  test_backend_client.py  test_backend_status.py  test_calibrate.py  test_config.py  test_corpus_loader.py  test_decision.py  test_domain_types.py  test_e2e_calibration.py  test_event_log.py  test_frame_sampler.py  test_interview_runner.py  test_livekit_adapter_playout.py  test_livekit_agent.py  test_livekit_session_voice.py  test_metrics.py  test_perception.py  test_persistence.py  test_probe.py  test_realtime_adaptive_candidate.py  test_realtime_control_bus.py  test_realtime_coverage.py  test_realtime_fake_session.py  test_realtime_guardrail_monitor.py  test_realtime_harness_measurement.py  test_realtime_livekit_adapter.py  test_realtime_openai_ws_adapter.py  test_realtime_plan_builder.py  test_realtime_run_session_backstop.py  test_realtime_runner.py  test_realtime_steering.py  test_recording.py  test_replay.py  test_rollup.py  test_rubric_loader.py  test_scorer.py  test_scorer_io_types.py  test_scorer_prompt.py  test_session_builder.py  test_smoke.py  (+11 more)
(+549 files in other folders)
