[project]
name = "puddle-agent"
version = "0.1.0"
description = "Puddle voice interviewer agent worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "livekit-agents>=1.5.11",
    "livekit-plugins-deepgram>=0.7",
    "livekit-plugins-cartesia>=0.4",
    "livekit-plugins-turn-detector>=0.4",
    "livekit-plugins-silero>=1.5.11",
    "google-genai>=0.3",
    "asyncpg>=0.30",
    "livekit-plugins-openai>=1.5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["eval: live-API eval, deselected by default"]
addopts = "-m 'not eval'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
